--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <div class="container">
       <article class="card">
         <div class="qr-img">
-          <img src="/images/image-qr-code.png" alt="qr-code">
+          <img src="./images/image-qr-code.png" alt="qr-code">
         </div>
         <div class="text">
           <h4 class="heading-text">
