--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://github.com/Aamin887" target="_blank">Amin</a>.
   </div>
 </body>
 </html>
