--- a/index.html
+++ b/index.html
@@ -5,21 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
   <link rel="stylesheet" href="style.css">
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Frontend Mentor | QR code component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-   
-  </style>
 </head>
 <body>
 
   <div class="container">
       <article class="card">
         <div class="qr-img">
-          <img src="./images/image-qr-code.png" alt="qr-code">
+          <img src="./image/image-qr-code.png" alt="qr-code">
         </div>
         <div class="text">
           <h4 class="heading-text">
